# EvoSOC

./: .gitignore  grader.py  inference.py  openenv.yaml  test_scores.py
scripts/: validate-submission.sh
security_env/: .dockerignore  .gitignore  Dockerfile  README.md  client.py  grader.py  inference.py  models.py  openenv.yaml  pyproject.toml
security_env/agent/: train.py
security_env/server/: app.py  environment.py
