[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "security-env"
version = "0.1.0"
description = "OpenEnv-compatible RL environment for network threat containment"
requires-python = ">=3.10"
dependencies = [
  "openenv-core>=0.1.0",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.8.0",
]

[project.optional-dependencies]
train = [
  "torch>=2.3.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent*", "server*"]
